--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -18,30 +18,27 @@
            defmap-intf: port3
            description: Branch-LAN
            dynamic_mapping:
-             
-                 -scope:
+             -
+                 _scope:
+                   -
                        name: Warehouse_1
                        vdom: root
-                 local-intf: internal
+                       local-intf: internal
 
-                 -scope:
                        name: Branch_1
                        vdom: root
-                 local-intf: port3                 
+                       local-intf: port3                 
 
-                 -scope:
                        name: Branch_2
                        vdom: root
-                 local-intf: port3                  
+                       local-intf: port3                  
 
-                 -scope:
                        name: AWS-FGT
                        vdom: root
-                 local-intf: port2
+                       local-intf: port2
 
-                 -scope:
                        name: fgt-warehouse-ansible
                        vdom: root
-                 local-intf: internal
+                       local-intf: internal
                  
            name: Branch-LAN
