--- a/Branch-LAN.yml
+++ b/Branch-LAN.yml
@@ -9,7 +9,7 @@
      ansible_httpapi_port: 443
   tasks:
    - name: Branch-LAN
-     fmgr_dynamic_interface:
+     fmgr_dynamic_interface_dynamicmapping:
         adom: SD-WAN-Lab
         state: present
         dynamic_interface:
@@ -17,7 +17,7 @@
            default-mapping: enable
            defmap-intf: port3
            description: Branch-LAN
-           dynamic_mapping:
+           dynamic_interface_dynamicmapping:
              -
                  _scope:
                    -
