--- a/Set-Device-Properties-Input.yml
+++ b/Set-Device-Properties-Input.yml
@@ -21,5 +21,5 @@
               address: "{{city, country}}"
               branch-id: "{{branch-id}}"
               remote-dc-id:''
-              BGP-code: "{{'Branch Subnet'}}"
+              BGP-code: "{{Branch Subnet}}"
            name: "{{Device-Name}}"
