--- a/Set-Device-Properties-Input.yml
+++ b/Set-Device-Properties-Input.yml
@@ -8,18 +8,17 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
-   - name: Set Details
+   - name: Add Details
      fmgr_dvmdb_device:
         bypass_validation: False
         adom: SD-WAN-Lab
         device: fgt-warehouse-ansible
         dvmdb_device:
-           hostname: fgt-warehouse-ansible
-           latitude: '54.5973'
-           longitude: '-5.9301'
+           hostname: "{{fgt-warehouse-ansible}}"
+           latitude: "{{latitiude}}"
+           longitude: "{{longtidue}}"
            meta fields: 
-              address: Belfast, England
-              branch-id: '4'
-              remote-dc-id:''
-              BGP-code: '19.6.0'
-           name: fgt-warehouse-ansible
+              address: "{{city, country}}"
+              branch-id: "{{branch-id}}"
+              remote-dc-id:
+              BGP-code: "{{Branch Subnet}}"
