--- a/Add-Device-Input-Test.yml
+++ b/Add-Device-Input-Test.yml
@@ -17,7 +17,7 @@
               device action: add_model
               adm_usr: fgtadmin
               mgmt_mode: fmgfaz
-              name: {{Dname}}
+              name: "{{Dname}}"
               os_type: fos
               os_ver: '6.0'
               mr: '4'
