--- a/Add-Device-Input-Test.yml
+++ b/Add-Device-Input-Test.yml
@@ -21,7 +21,7 @@
               os_type: fos
               os_ver: '6.0'
               mr: '4'
-              platform_str: FortiGate-81E-POE
+              platform_str: "{{model}}"
               sn: FG81EPTK19002078
            groups: 
              -
