--- a/assign-cli-template-group-input.yml
+++ b/assign-cli-template-group-input.yml
@@ -1,4 +1,3 @@
-
 ---
 - hosts: 192.168.0.104
   collections:
@@ -25,7 +24,7 @@
                              ],
                         "scope member": [
                           {
-                            "name": "fgt-warehouse-ansible",
+                            "name": "$deviceName",
                             "vdom": "root"
                           }
                       ]
