--- a/assign-cli-template-group-input.yml
+++ b/assign-cli-template-group-input.yml
@@ -24,7 +24,7 @@
                              ],
                         "scope member": [
                           {
-                            "name": "{deviceName}",
+                            "name": "dog",
                             "vdom": "root"
                           }
                       ]
