--- a/Set-Device-Properties-Input.yml
+++ b/Set-Device-Properties-Input.yml
@@ -21,5 +21,6 @@
               address: "{{citycountry}}"
               branch-id: "{{branchid}}"
               remote-dc-id:
+              LAN-IP: ""{{LAN-IP}}"
               BGP-code: "{{networksubnet}}"
            name: "{{devicename1}}"
