--- a/Set-Device-Properties-Input.yml
+++ b/Set-Device-Properties-Input.yml
@@ -21,6 +21,6 @@
               address: "{{citycountry}}"
               branch-id: "{{branchid}}"
               remote-dc-id:
-              LAN-IP: "{{LAN-IP}}"
+              LAN-IP: "{{LANIP}}"
               BGP-code: "{{networksubnet}}"
            name: "{{devicename1}}"
