--- a/Add-Device.yml
+++ b/Add-Device.yml
@@ -16,11 +16,14 @@
            device:
               device action: add_model
               adm_usr: fgtadmin
+              adm_pass: Fortinet!)
               mgmt_mode: fmgfaz
               name: fgt-warehouse-ansible
               os_type: fos
               os_ver: '6.0'
               mr: '4'
+              version: '600'
+              flags: '67371040'
               platform_str: FortiGate-60E
               sn: FGT60ETK18041540
            groups: 
