--- a/Add-Device.yml
+++ b/Add-Device.yml
@@ -8,27 +8,25 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
-    - name: create task to add device
-      fmgr_generic:
+       - name: Create the task to add the device
+       fmgr_generic:
          method: exec
          params:
-             - url: /dvm/cmd/discover/device
-               data:
-                   adom: SD-WAN-Lan
-                   device:
-                      name: fgt-warehouse-ansible
-                      adm_usr: fgtadmin
-                      mgmt_mode: fmgfaz
-                      name: fgt-warehouse-ansible
-                      os_type: fos
-                      os_ver: '6.0'
-                      mr: '4'
-                      platform_str: FortiGate-60E
-                      sn: FGT60ETK18041540
-                    flags:
-                      - create_task
-                      - nonblocking             
-                groups: 
-                  -
-                     name: Warehouse-Group
-                     adom: SD-WAN-Lab
+            - url: /dvm/cmd/add/device
+              data:
+                  adom: SD-WAN-Lab
+                  device:
+                     adm_usr: fgtadmin
+                     desc: "The device is added via Ansible"
+                     mgmt_mode: "fmgfaz"
+                     name: fgt-warehouse-ansible
+                     platform_str: FortiGate-60E
+                     sn: FGT60ETK18041540
+                     name: fgt-warehouse-ansible
+                     os_type: fos
+                     os_ver: '6.0'
+                     mr: '4'
+                  flags:
+                    - create_task
+                    - nonblocking
+      register: installing_task  
