--- a/normalize-interface-input.yml
+++ b/normalize-interface-input.yml
@@ -12,7 +12,7 @@
      fmgr_dynamic_interface_dynamicmapping:
         adom: SD-WAN-Lab
         state: present
-        interface: "{{interface}}"
+        interface: "{{interfaceName}}"
         dynamic_interface_dynamicmapping:
            _scope:
              -
