--- a/test/Step-2-Set-Device-Properties.yml
+++ b/test/Step-2-Set-Device-Properties.yml
@@ -19,7 +19,7 @@
                     longitude: "{{longitude}}"
                     meta fields:
                         Address: "{{CityCountry}}"
-                        branch-id: "{{branch-id}}"
+                        branch-id: "{{branchID}}"
                         dc-id: ""
                         remote-dc-id: "" 
-                        BGP-code: "{{BGP-Code}}"
+                        BGP-code: "{{BGPCode}}"
