--- a/Set-Device-Properties-Input.yml
+++ b/Set-Device-Properties-Input.yml
@@ -14,7 +14,7 @@
         adom: SD-WAN-Lab
         device: "{{devicename}}"
         dvmdb_device:
-           hostname: "{{hostname}}"
+           hostname: "{{devicename}}"
            latitude: "{{latitude}}"
            longitude: "{{longitude}}"
            meta fields: 
@@ -23,4 +23,4 @@
               remote-dc-id:
               LAN-IP: "{{LANIP}}"
               BGP-code: "{{networksubnet}}"
-           name: "{{devicename1}}"
+           name: "{{devicename}}"
