--- a/test/Step-2-Set-Device-Properties.yml
+++ b/test/Step-2-Set-Device-Properties.yml
@@ -24,3 +24,4 @@
               remote-dc-id:
               LAN-IP: "{{LANIP}}"
               BGP-code: "{{networksubnet}}"
+           name: "{{devicename}}"
