--- a/test/Step-3-Add-VPN-Spokes.yml
+++ b/test/Step-3-Add-VPN-Spokes.yml
@@ -47,6 +47,13 @@
                     tunnel-search: 0
                     unity-support: 1
                     xauthtype: 1
+  tasks:
+      - name: Add VPN Spokes
+        fmgr_generic:
+            method: exec
+            params: 
+                - url: pm/config/adom/SD-WAN-Lab/obj/vpnmgr/node
+                  data:
                     protected_subnet:
                         addr: all
                         seq: 1
