--- a/test/Step-3-Add-VPN-Spokes.yml
+++ b/test/Step-3-Add-VPN-Spokes.yml
@@ -4,10 +4,10 @@
     - fortinet.fortimanager
   connection: httpapi
   vars:
-     ansible_httpapi_use_ssl: True
-     ansible_httpapi_validate_certs: False
-     ansible_httpapi_port: 443
-  tasks:
+       ansible_httpapi_use_ssl: True
+       ansible_httpapi_validate_certs: False
+       ansible_httpapi_port: 443
+   - tasks:
       - name: Add VPN Spokes OL_WAN1
         fmgr_generic:
             method: exec
@@ -47,6 +47,7 @@
                     tunnel-search: 0
                     unity-support: 1
                     xauthtype: 1
+   - tasks:
       - name: Add VPN Spokes OL_WAN2
         fmgr_generic:
             method: exec
