--- a/test/Step-3-Add-VPN-Spokes2.yml
+++ b/test/Step-3-Add-VPN-Spokes2.yml
@@ -17,35 +17,35 @@
                     protected_subnet:
                       -
                         addr: all
-                        seq: 1
+                        seq: '1'
                         
                     scope member:
                       -
                         name: "{{deviceName}}"
                         vdom: root
                         
-                    id: 9
+                    id: '9'
                     vpntable: OL_WAN1
-                    role: 1
+                    role: '1'
                     usrgrp: []
                     iface: "{{interfaceName1}}"
-                    automatic_routing: 0
+                    automatic_routing: '0'
                     extgwip: []
-                    extgw_p2_per_net: 0
-                    route-overlap: 0
+                    extgw_p2_per_net: '0'
+                    route-overlap: '0'
                     vpn-zone: []
                     spoke-zone: []					
                     vpn-interface-priority: []
-                    auto-configuration: 1
-                    ipsec-lease-hold: 60
-                    add-route: 0
-                    assign-ip: 1
-                    assign-ip-from: 0
-                    exchange-interface-ip: 0
-                    mode-cfg: 1
-                    mode-cfg-ip-version: 0
-                    net-device: 1
+                    auto-configuration: '1'
+                    ipsec-lease-hold: '60'
+                    add-route: '0'
+                    assign-ip: '1'
+                    assign-ip-from: '0'
+                    exchange-interface-ip: '0'
+                    mode-cfg: '1'
+                    mode-cfg-ip-version:' 0'
+                    net-device: '1'
                     peergrp: []
-                    tunnel-search: 0
-                    unity-support: 1
-                    xauthtype: 1
+                    tunnel-search: '0'
+                    unity-support: '1'
+                    xauthtype: '1'
