--- a/test/Step-3-Add-VPN-Spokes2.yml
+++ b/test/Step-3-Add-VPN-Spokes2.yml
@@ -8,42 +8,77 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
-      - name: Add VPN Spokes OL_WAN1
+           - name: Add VPN Spokes OL_WAN2
         fmgr_generic:
-            method: set
-            params: 
-                - url: pm/config/adom/SD-WAN-Lab/obj/vpnmgr/node
-                  data:
-                    protected_subnet:
-                      -
-                        addr: all
-                        seq: '1'
-                    scope member:
-                      -
-                        name: "{{deviceName}}"
-                        vdom: root
-                    id: '9'
-                    vpntable: OL_WAN1
-                    role: '1'
-                    usrgrp: []
-                    iface: "{{interfaceName1}}"
-                    automatic_routing: '0'
-                    extgwip: []
-                    extgw_p2_per_net: '0'
-                    route-overlap: '0'
-                    vpn-zone: []
-                    spoke-zone: []					
-                    vpn-interface-priority: []
-                    auto-configuration: '1'
-                    ipsec-lease-hold: '60'
-                    add-route: '0'
-                    assign-ip: '1'
-                    assign-ip-from: '0'
-                    exchange-interface-ip: '0'
-                    mode-cfg: '1'
-                    mode-cfg-ip-version: '0'
-                    net-device: '1'
-                    peergrp: []
-                    tunnel-search: '0'
-                    unity-support: '1'
-                    xauthtype: '1'
+session: '{{session}}'
+id: 1
+method: set
+params:
+  - url: '/pm/config/adom/{{adom}}/obj/vpnmgr/node'
+    data:
+      - protected_subnet:
+          addr: all
+          seq: 1
+        scope member:
+          name: '{{deviceName}}'
+          vdom: root
+        id: 7
+        vpntable: OL_WAN1
+        role: 1
+        usrgrp: []
+        iface: '{{interfaceName1}}'
+        automatic_routing: 0
+        extgwip: []
+        extgw_hubip: []
+        extgw_p2_per_net: 0
+        route-overlap: 0
+        vpn-zone: []
+        spoke-zone: []
+        vpn-interface-priority: 0
+        auto-configuration: 1
+        ipsec-lease-hold: 60
+        add-route: 0
+        assign-ip: 1
+        assign-ip-from: 0
+        exchange-interface-ip: 0
+        mode-cfg: 1
+        mode-cfg-ip-version: 0
+        net-device: 1
+        peergrp: []
+        peertype: 8
+        tunnel-search: 0
+        unity-support: 1
+        xauthtype: 1
+      - protected_subnet:
+          addr: all
+          seq: 1
+        scope member:
+          name: '{{deviceName}}'
+          vdom: root
+        id: 8
+        vpntable: OL_WAN2
+        role: 1
+        usrgrp: []
+        iface: '{{interfaceName2}}'
+        automatic_routing: 0
+        extgwip: []
+        extgw_hubip: []
+        extgw_p2_per_net: 0
+        route-overlap: 0
+        vpn-zone: []
+        spoke-zone: []
+        vpn-interface-priority: 0
+        auto-configuration: 1
+        ipsec-lease-hold: 60
+        add-route: 0
+        assign-ip: 1
+        assign-ip-from: 0
+        exchange-interface-ip: 0
+        mode-cfg: 1
+        mode-cfg-ip-version: 0
+        net-device: 1
+        peergrp: []
+        peertype: 8
+        tunnel-search: 0
+        unity-support: 1
+        xauthtype: 1
