--- a/test/Step-3-Add-VPN-Spokes2.yml
+++ b/test/Step-3-Add-VPN-Spokes2.yml
@@ -8,76 +8,36 @@
      ansible_httpapi_validate_certs: False
      ansible_httpapi_port: 443
   tasks:
-           - name: Add VPN Spokes OL_WAN2
-        fmgr_generic:
-id: 1
-method: set
-params:
-  - url: '/pm/config/adom/{{adom}}/obj/vpnmgr/node'
-    data:
-      - protected_subnet:
-          addr: all
-          seq: 1
-        scope member:
-          name: '{{deviceName}}'
-          vdom: root
-        id: 7
-        vpntable: OL_WAN1
-        role: 1
-        usrgrp: []
-        iface: '{{interfaceName1}}'
-        automatic_routing: 0
-        extgwip: []
-        extgw_hubip: []
-        extgw_p2_per_net: 0
-        route-overlap: 0
-        vpn-zone: []
-        spoke-zone: []
-        vpn-interface-priority: 0
-        auto-configuration: 1
-        ipsec-lease-hold: 60
-        add-route: 0
-        assign-ip: 1
-        assign-ip-from: 0
-        exchange-interface-ip: 0
-        mode-cfg: 1
-        mode-cfg-ip-version: 0
-        net-device: 1
-        peergrp: []
-        peertype: 8
-        tunnel-search: 0
-        unity-support: 1
-        xauthtype: 1
-      - protected_subnet:
-          addr: all
-          seq: 1
-        scope member:
-          name: '{{deviceName}}'
-          vdom: root
-        id: 8
-        vpntable: OL_WAN2
-        role: 1
-        usrgrp: []
-        iface: '{{interfaceName2}}'
-        automatic_routing: 0
-        extgwip: []
-        extgw_hubip: []
-        extgw_p2_per_net: 0
-        route-overlap: 0
-        vpn-zone: []
-        spoke-zone: []
-        vpn-interface-priority: 0
-        auto-configuration: 1
-        ipsec-lease-hold: 60
-        add-route: 0
-        assign-ip: 1
-        assign-ip-from: 0
-        exchange-interface-ip: 0
-        mode-cfg: 1
-        mode-cfg-ip-version: 0
-        net-device: 1
-        peergrp: []
-        peertype: 8
-        tunnel-search: 0
-        unity-support: 1
-        xauthtype: 1
+   - name: VPN node for VPN Manager. Must specify vpntable and scope member.
+     fmgr_vpnmgr_node:
+        adom: SD-WAN-Lab
+        state: present
+        vpnmgr_node:
+           add-route: disable
+           assign-ip: enable
+           assign-ip-from: range
+           auto-configuration: enable
+           automatic_routing: disable
+           extgw_p2_per_net: disable
+           id: '9'
+           iface: WAN1-ISP
+           ipsec-lease-hold: '60'
+           mode-cfg: enable
+           mode-cfg-ip-version: '4'
+           net-device: disable
+           peertype: any
+           protected_subnet:
+             -
+                 addr: all
+                 seq: '1'
+           role: spoke
+           route-overlap: use-old
+           tunnel-search: selectors
+           unity-support: enable
+           vpn-interface-priority: '0'
+           vpntable: OL_WAN1
+           xauthtype: client
+           scope member:
+             -
+                 name: fgt-warehouse-ansible
+                 vdom: root                 
