--- a/test/Step-3-Add-VPN-Spokes2.yml
+++ b/test/Step-3-Add-VPN-Spokes2.yml
@@ -20,7 +20,7 @@
            automatic_routing: disable
            extgw_p2_per_net: disable
            id: '9'
-           iface: WAN1-ISP
+           iface: "{{interfaceName}}"
            ipsec-lease-hold: '60'
            mode-cfg: enable
            mode-cfg-ip-version: '4'
@@ -39,5 +39,5 @@
            xauthtype: client
            scope member:
              -
-                 name: fgt-warehouse-ansible
+                 name: "{{deviceName}}"
                  vdom: root                 
