--- a/test/Install-to-device.yml
+++ b/test/Install-to-device.yml
@@ -17,5 +17,5 @@
                 pkg: "{{packageName}}"
                 scope:
                   -
-                    name: "{{groupName}}"
+                    name: "{{deviceName}}"
                     vdom: root  
