--- a/test/AddFortigate.yml
+++ b/test/AddFortigate.yml
@@ -188,5 +188,5 @@
                pkg: "{{packageName}}"
                scope:
                  -
-                   name: "{{groupName}}"
+                   name: "{{deviceName}}"
                    vdom: root      
