--- a/test/AddFortigate.yml
+++ b/test/AddFortigate.yml
@@ -47,7 +47,8 @@
               meta fields: 
                  address: "{{citycountry}}"
                  branch-id: "{{branchid}}"
-                 remote-dc-id: "0"
+                 remote-dc-id:
+                 dc-id: "0"
                  LAN-IP: "{{LANIP}}"
                  BGP-code: "{{networksubnet}}"
               name: "{{deviceName}}"
